--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -37,6 +37,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
          </activity>
+         <activity android:name=".Menuactivity" 
+          android:label="@string/title_activity_conexion" />
+         
     </application>
 
 </manifest>
