--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,7 +39,17 @@
          </activity>
          <activity android:name=".Menuactivity" 
           android:label="@string/title_activity_conexion" />
-         
+         <activity android:name="com.example.huertapps.DeviceListActivity"
+       android:label="@string/app_name"/>
+         <activity android:name="com.example.huertapps.RemoteBluetooth"
+       android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            </activity>
+             
     </application>
 
 </manifest>
