--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -22,8 +22,8 @@
             android:name="com.example.huertapps.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.MAIN" 
+						android:launchMode="standard"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -38,17 +38,10 @@
             </intent-filter>
          </activity>
          <activity android:name=".Menuactivity" 
-          android:label="@string/title_activity_conexion" />
-         <activity android:name="com.example.huertapps.DeviceListActivity"
-       android:label="@string/app_name"/>
-         <activity android:name="com.example.huertapps.RemoteBluetooth"
-       android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            </activity>
+          android:label="@string/title_activity_conexion" 
+          android:launchMode="standard"/>d
+           
+           
              
     </application>
 
