--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -39,10 +39,16 @@
          </activity>
          <activity android:name=".Menuactivity" 
           android:label="@string/title_activity_conexion" 
-          android:launchMode="standard"/>d
-           
+          android:launchMode="standard"/>
+         <activity android:name=".RegarActivity" 
+          android:label="@string/title_activity_conexion" 
+          android:launchMode="standard"/>
+         <activity android:name=".FertilizarActivity" 
+          android:label="@string/title_activity_conexion" 
+          android:launchMode="standard"/>
            
              
     </application>
 
 </manifest>
+
